# ANNFS

./: .gitignore  CMakeLists.txt  README.md  main.cpp
JsonFiles/: example_conf_01.json  example_conf_02.json
LinearAlgebra/: CMakeLists.txt  Matrix.cpp  Matrix.h
LinearAlgebra/operations/: multiplyMatrices.h
Math/: CMakeLists.txt
Math/LinearAlgebra/: Matrix.cpp  Matrix.h  Operations.cpp  Operations.h
NeuralNetwork/: BackPropagation.cpp  CMakeLists.txt  FeedForward.cpp  Layer.cpp  Layer.h  LossFunctions.cpp  LossFunctions.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h  SetErrors.cpp  train.cpp
NeuralNetwork_legacy/: Layer.cpp  NeuralNetwork.h  Neuron.cpp
Tests/: CMakeLists.txt  gradient_checking.cpp  gradient_checking.hpp
Utils/: CMakeLists.txt  utils.cpp  utils.h
